@@ -16,6 +16,8 @@ import transaction
 from Products.minaraad.content.contacts import contacts_schema
 from Products.minaraad.ThemeMixin import old_theme_schema
 from Products.minaraad.ThemeMixin import OldThemeMixin
+from Products.minaraad.ThemeMixin import theme_reference_schema
+from Products.minaraad.ThemeMixin import ThemeReferenceMixin
 
 project_schema = atapi.OrderedBaseFolderSchema.copy() + atapi.Schema((
 
@@ -174,6 +176,7 @@ project_schema = atapi.OrderedBaseFolderSchema.copy() + atapi.Schema((
     ),
 )) + \
     old_theme_schema.copy() + \
+    theme_reference_schema.copy() + \
     contacts_schema.copy()
 
 project_schema['title'].widget.label = _(
@@ -206,6 +209,7 @@ permission_mapping = {
         'responsible_group',
         'assigned_groups',
         'theme',
+        'theme_path',
         'coordinator',
         'authors'],
     'minaraad.projects: manage active project fields': ['postponed_date'],
@@ -228,7 +232,7 @@ for schema_key in project_schema.keys():
                                                      'view': 'invisible'}
 
 
-class Project(atapi.OrderedBaseFolder, OldThemeMixin):
+class Project(atapi.OrderedBaseFolder, OldThemeMixin, ThemeReferenceMixin):
     """
     """
     security = ClassSecurityInfo()
@@ -238,6 +242,14 @@ class Project(atapi.OrderedBaseFolder, OldThemeMixin):
     schema = project_schema
 
     security.declarePrivate('_renameAfterCreation')
+
+    @security.public
+    def getThemeName(self):
+        """Get the theme name when it is set."""
+        name = ThemeReferenceMixin.getThemeName(self)
+        if name is not None:
+            return name
+        return OldThemeMixin.getThemeName(self)
 
     def _renameAfterCreation(self, check_auto_id=False):
         """ Use the project number and year to generate the ID.
